# storage/api-docs/api-docs.json
@@ -274,12 +274,335 @@
                 }
             }
         },
+        "/clients": {
+            "get": {
+                "tags": [
+                    "Clients"
+                ],
+                "summary": "Client Companies List",
+                "operationId": "clients_index",
+                "responses": {
+                    "200": {
+                        "description": "Everything is fine",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "clients": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "current_page": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "data": {
+                                                        "type": "array",
+                                                        "items": {
+                                                            "$ref": "#/components/schemas/ClientResource"
+                                                        },
+                                                        "collectionFormat": "multi"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            },
+                                            "collectionFormat": "multi"
+                                        },
+                                        "first_page_url": {
+                                            "type": "string",
+                                            "example": "http://127.0.0.1:8000/api/clients?page=1"
+                                        },
+                                        "from": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "last_page": {
+                                            "type": "integer",
+                                            "example": 4
+                                        },
+                                        "last_page_url": {
+                                            "type": "string",
+                                            "example": "http://127.0.0.1:8000/api/clients?page=4"
+                                        },
+                                        "links": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "url": {
+                                                        "type": "string",
+                                                        "example": ""
+                                                    },
+                                                    "label": {
+                                                        "type": "string",
+                                                        "example": ""
+                                                    },
+                                                    "active": {
+                                                        "type": "boolean",
+                                                        "example": ""
+                                                    }
+                                                },
+                                                "type": "object"
+                                            },
+                                            "example": [
+                                                {
+                                                    "url": null,
+                                                    "label": "&laquo; Previous",
+                                                    "active": false
+                                                },
+                                                {
+                                                    "url": "http://127.0.0.1:8000/api/clients?page=1",
+                                                    "label": "1",
+                                                    "active": true
+                                                },
+                                                {
+                                                    "url": "http://127.0.0.1:8000/api/clients?page=2",
+                                                    "label": "2",
+                                                    "active": false
+                                                },
+                                                {
+                                                    "url": "http://127.0.0.1:8000/api/clients?page=3",
+                                                    "label": "3",
+                                                    "active": false
+                                                },
+                                                {
+                                                    "url": "http://127.0.0.1:8000/api/clients?page=4",
+                                                    "label": "4",
+                                                    "active": false
+                                                },
+                                                {
+                                                    "url": "http://127.0.0.1:8000/api/clients?page=2",
+                                                    "label": "Next &raquo;",
+                                                    "active": false
+                                                }
+                                            ]
+                                        },
+                                        "next_page_url": {
+                                            "type": "string",
+                                            "example": "http://127.0.0.1:8000/api/clients?page=2"
+                                        },
+                                        "path": {
+                                            "type": "string",
+                                            "example": "http://127.0.0.1:8000/api/clients"
+                                        },
+                                        "per_page": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "prev_page_url": {
+                                            "type": "string",
+                                            "example": null
+                                        },
+                                        "to": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "total": {
+                                            "type": "integer",
+                                            "example": 4
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Clients"
+                ],
+                "summary": "Create Client Company",
+                "operationId": "clients_store",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/ClientRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Everything is fine",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "role": {
+                                            "$ref": "#/components/schemas/ClientResource"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/clients/{client}": {
+            "get": {
+                "tags": [
+                    "Clients"
+                ],
+                "summary": "Show Client Company",
+                "operationId": "clients_show",
+                "parameters": [
+                    {
+                        "name": "client",
+                        "in": "path",
+                        "description": "The client id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Everything is fine",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "client": {
+                                            "$ref": "#/components/schemas/ClientResource"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "404": {
+                        "description": "Error: Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Clients"
+                ],
+                "summary": "Update Client Company",
+                "operationId": "clients_update",
+                "parameters": [
+                    {
+                        "name": "client",
+                        "in": "path",
+                        "description": "The client id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/ClientRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Everything is fine",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "client": {
+                                            "$ref": "#/components/schemas/ClientResource"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "404": {
+                        "description": "Error: Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Clients"
+                ],
+                "summary": "Delete Client Company",
+                "operationId": "clients_delete",
+                "parameters": [
+                    {
+                        "name": "client",
+                        "in": "path",
+                        "description": "The client id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Everything is fine"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "404": {
+                        "description": "Error: Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/roles": {
             "get": {
                 "tags": [
                     "Roles"
                 ],
-                "summary": "Index",
+                "summary": "List of Roles",
                 "operationId": "roles_index",
                 "responses": {
                     "200": {
@@ -497,7 +820,7 @@
                 "tags": [
                     "Users"
                 ],
-                "summary": "Index",
+                "summary": "List of users",
                 "operationId": "users_index",
                 "responses": {
                     "200": {
@@ -660,7 +983,7 @@
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "role": {
+                                        "user": {
                                             "$ref": "#/components/schemas/UserResource"
                                         }
                                     },
@@ -807,6 +1130,60 @@
                 },
                 "type": "object"
             },
+            "ClientRequest": {
+                "title": "Client Request",
+                "description": "Client Request",
+                "properties": {
+                    "name": {
+                        "title": "name",
+                        "description": "Name of Client Company",
+                        "type": "string",
+                        "example": "Company"
+                    },
+                    "user_id": {
+                        "title": "description",
+                        "description": "ID of user to assign",
+                        "type": "integer",
+                        "example": "2"
+                    }
+                },
+                "type": "object"
+            },
+            "ClientResource": {
+                "title": "Client Resource",
+                "description": "Client Resource",
+                "properties": {
+                    "id": {
+                        "title": "id",
+                        "description": "ID of Client",
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "name": {
+                        "title": "name",
+                        "description": "Name of client",
+                        "type": "string",
+                        "example": "Client"
+                    },
+                    "created_at": {
+                        "title": "created_at",
+                        "description": "created date of client",
+                        "type": "string",
+                        "example": "2021-10-07T19:34:40.000000Z"
+                    },
+                    "updated_at": {
+                        "title": "updated_at",
+                        "description": "updated date of client",
+                        "type": "string",
+                        "example": "2021-10-07T19:34:40.000000Z"
+                    },
+                    "user": {
+                        "title": "user",
+                        "type": "object"
+                    }
+                },
+                "type": "object"
+            },
             "EditUserRequest": {
                 "title": "Edit User Request",
                 "description": "Edit User Request",
@@ -857,7 +1234,7 @@
                 "description": "Login Resource",
                 "properties": {
                     "user": {
-                        "$ref": "#/components/schemas/UserResource"
+                        "$ref": "#/components/schemas/ClientResource"
                     },
                     "token": {
                         "title": "token",
@@ -910,13 +1287,13 @@
                         "title": "name",
                         "description": "Name of role",
                         "type": "string",
-                        "example": "user"
+                        "example": "role"
                     },
                     "description": {
                         "title": "description",
-                        "description": "Description of user",
+                        "description": "Description of role",
                         "type": "string",
-                        "example": "SImple User"
+                        "example": "Simple Role"
                     }
                 },
                 "type": "object"
@@ -1086,6 +1463,10 @@
         {
             "name": "Users",
             "description": "API Endpoints of Users"
+        },
+        {
+            "name": "Clients",
+            "description": "API Endpoints of Client Companies"
         }
     ],
     "security": [
